kubernetes/apps/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
        options:
          - name: ndots
            value: "1"
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8080
              name: qbit-web-ui
          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
        - name: gluetun
          image: qmcgaw/gluetun:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: qbit-download
        - name: config
          persistentVolumeClaim:
            claimName: qbit-pvc
